<resources>
    <string name="app_name">Ejercicios Escolares</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Estudiando en Casa</string>
    <string name="nav_header_subtitle">Estudia practicando y leyendo</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ajustes</string>
    <string name="titulo_home">CONOCE LOS CURSOS QUE TENEMOS</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_matematica">Matemática</string>
    <string name="menu_comunicación">Comunicación</string>
    <string name="menu_ciencia">Ciencia</string>
    <string name="menu_historia">Historia</string>
    <string name="areas_de_estaapp">ÁREAS QUE PUEDES ESTUDIAR</string>
    <string name="areas_de_comunicación">AREAS DE COMUNICACIÓN</string>
    <string name="areas_de_ciencia">AREAS DE CIENCIA</string>
    <string name="areas_de_historia">AREAS DE HISTORIA</string>
    <string name="algebra">Algebra</string>
    <string name="geometria">Geometría</string>
    <string name="Trigonometría">Trigonometría</string>
    <string name="areas">Áreas</string>
    <string name="fragment_algebra">Albrebra</string>
    <string name="fragment_geometria">Geometría</string>
    <string name="fragment_Trigonometria">Trigonometría</string>
    <string name="Literatura">Literatura</string>
    <string name="Fragment_Literatura">Literatura</string>
    <string name="Fragment_Lenguaje">Lenguaje</string>
    <string name="Lenguaje">Lenguaje</string>
    <string name="Fisica">Física</string>
    <string name="Fragment_Fisica">Física</string>
    <string name="Quimica">Química</string>
    <string name="Fragment_Quimica">Química</string>
    <string name="Historia">Historía</string>
    <string name="Fragment_historia">Historía</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="boton">Boton</string>
    <string name="hecho">Realizado por Dengel Rivera</string>
</resources>