<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ciencia.CienciaFragment"
    android:background="@drawable/fondopantalla"
    >


    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/text_ciencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/areas"
            android:fontFamily="@font/rockaboy_rought"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:layout_margin="15sp"
            />
        <RelativeLayout
            android:id="@+id/fisicainicio"
            android:layout_height="250dp"
            android:layout_width="match_parent"
            android:background="@drawable/roundcorner4"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Fisica"
                android:textSize="50sp"
                android:fontFamily="@font/rockaboy_rought"
                android:padding="10sp"
                android:layout_marginTop="35sp"
                android:textColor="@color/dorado"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="30dp"
            android:id="@+id/Quimicainicio"
            android:layout_height="250dp"
            android:layout_width="match_parent"

            android:background="@drawable/roundcorner5"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Quimica"
                android:textSize="50sp"
                android:fontFamily="@font/rockaboy_rought"
                android:padding="10sp"
                android:layout_marginTop="35sp"
                android:textColor="@color/dorado"
                />
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>